z-index bug fix

--- a/static/css/scrollytelling.css
+++ b/static/css/scrollytelling.css
@@ -50,7 +50,6 @@ figure {
   -moz-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
   background-color: white;
-  z-index: 1;
 }
 
 figure p {
@@ -67,7 +66,6 @@ figure p {
   color: black;
 }
 
-
 .step {
   height: 785px;
   transition-duration: 0.25s;
@@ -75,7 +73,7 @@ figure p {
   margin: 0 auto 2rem auto;
   /* background-color:white; */
   color: black;
-  z-index: -1;
+  z-index: 2;
 }
 
 .step:last-child {
@@ -91,7 +89,7 @@ figure p {
   padding: 1rem;
   font-size: 1.5rem;
   background-color: #f3f3f3;
-  z-index: -1;
+  z-index: 2;
 }
 
 #lollipop-container {
